--- a/index.html
+++ b/index.html
@@ -2081,108 +2081,101 @@ function addDeliveryMarkers() {
 
     // Limpar marcadores existentes
     Object.values(deliveryMarkers).forEach(marker => {
-        if (marker.map) {
-            marker.map = null; // Remove do mapa
+        if (marker.setMap) {
+            marker.setMap(null);
+        } else if (marker.map) {
+            marker.map = null;
         }
     });
     deliveryMarkers = {};
 
-    // Adicionar marcador para cada endereço no banco de dados
+    // OTIMIZAÇÃO: Agrupar endereços por coordenadas únicas (remover duplicatas)
+    const uniqueLocations = new Map();
+
     Object.entries(addressDatabase).forEach(([qrCode, data]) => {
+        const locationKey = `${data.latitude.toFixed(6)},${data.longitude.toFixed(6)}`;
+
+        if (!uniqueLocations.has(locationKey)) {
+            uniqueLocations.set(locationKey, {
+                qrCode,
+                data,
+                count: 1,
+                qrCodes: [qrCode]
+            });
+        } else {
+            // Já existe marcador nessa localização
+            const existing = uniqueLocations.get(locationKey);
+            existing.count++;
+            existing.qrCodes.push(qrCode);
+        }
+    });
+
+    console.log(`Criando ${uniqueLocations.size} marcadores únicos (de ${Object.keys(addressDatabase).length} endereços)`);
+
+    // Criar marcadores apenas para localizações únicas
+    uniqueLocations.forEach(({qrCode, data, count, qrCodes}) => {
         const position = {
             lat: data.latitude,
             lng: data.longitude
         };
 
-        // Criar elemento do marcador (pacote/caixa)
-        const markerDiv = document.createElement('div');
-        markerDiv.style.width = '30px';
-        markerDiv.style.height = '30px';
-        markerDiv.style.background = '#ea4335';
-        markerDiv.style.border = '2px solid white';
-        markerDiv.style.borderRadius = '4px';
-        markerDiv.style.boxShadow = '0 2px 6px rgba(0,0,0,0.4)';
-        markerDiv.style.display = 'flex';
-        markerDiv.style.alignItems = 'center';
-        markerDiv.style.justifyContent = 'center';
-        markerDiv.style.fontSize = '16px';
-        markerDiv.innerHTML = '📦';
-        markerDiv.style.cursor = 'pointer';
-        markerDiv.style.transition = 'transform 0.2s';
-
-        markerDiv.addEventListener('mouseenter', () => {
-            markerDiv.style.transform = 'scale(1.2)';
-        });
-        markerDiv.addEventListener('mouseleave', () => {
-            markerDiv.style.transform = 'scale(1)';
-        });
-
         try {
-            // Criar marcador usando AdvancedMarkerElement (se disponível) ou Marker clássico
-            if (google.maps.marker && google.maps.marker.AdvancedMarkerElement) {
-                const marker = new google.maps.marker.AdvancedMarkerElement({
-                    map,
-                    position,
-                    content: markerDiv,
-                    title: data.address.split('\n')[0] // Primeira linha do endereço
-                });
+            // Usar APENAS Marker clássico otimizado (mais leve)
+            const marker = new google.maps.Marker({
+                position,
+                title: data.address.split('\n')[0],
+                icon: {
+                    path: google.maps.SymbolPath.CIRCLE,
+                    fillColor: '#ea4335',
+                    fillOpacity: 0.9,
+                    strokeColor: '#ffffff',
+                    strokeWeight: 2,
+                    scale: 8
+                },
+                label: count > 1 ? {
+                    text: count.toString(),
+                    color: '#ffffff',
+                    fontSize: '12px',
+                    fontWeight: 'bold'
+                } : {
+                    text: '📦',
+                    color: '#ffffff',
+                    fontSize: '12px'
+                },
+                optimized: true // IMPORTANTE: habilita otimização de renderização
+            });
 
-                // Adicionar listener de clique no marcador
-                marker.addListener('click', () => {
-                    map.setCenter(position);
-                    map.setZoom(18);
+            // Adicionar listener de clique
+            marker.addListener('click', () => {
+                map.setCenter(position);
+                map.setZoom(16);
 
-                    showToast(
-                        '📦 Pacote',
-                        data.address,
-                        'info',
-                        5000
-                    );
-                });
+                const message = count > 1
+                    ? `${count} entregas neste local:\n${data.address}`
+                    : data.address;
 
-                deliveryMarkers[qrCode] = marker;
-            } else {
-                // Fallback: usar Marker clássico com ícone personalizado
-                const marker = new google.maps.Marker({
-                    map,
-                    position,
-                    title: data.address.split('\n')[0],
-                    icon: {
-                        path: google.maps.SymbolPath.CIRCLE,
-                        fillColor: '#ea4335',
-                        fillOpacity: 1,
-                        strokeColor: '#ffffff',
-                        strokeWeight: 2,
-                        scale: 10
-                    },
-                    label: {
-                        text: '📦',
-                        color: '#ffffff',
-                        fontSize: '14px'
-                    }
-                });
+                showToast(
+                    '📦 Pacote',
+                    message,
+                    'info',
+                    5000
+                );
+            });
 
-                // Adicionar listener de clique
-                marker.addListener('click', () => {
-                    map.setCenter(position);
-                    map.setZoom(18);
+            // Armazenar marcador para todos os QR codes nessa localização
+            qrCodes.forEach(code => {
+                deliveryMarkers[code] = marker;
+            });
 
-                    showToast(
-                        '📦 Pacote',
-                        data.address,
-                        'info',
-                        5000
-                    );
-                });
+            // Adicionar ao mapa apenas uma vez
+            marker.setMap(map);
 
-                deliveryMarkers[qrCode] = marker;
-            }
         } catch (error) {
             console.error('Erro ao criar marcador de entrega:', error);
         }
     });
 
-    console.log(`${Object.keys(deliveryMarkers).length} marcadores de entrega adicionados`);
+    console.log(`${uniqueLocations.size} marcadores de entrega adicionados (otimizado)`);
 }
 
 // ===========================
